--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -56,6 +57,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
